Address some more mobile alignment issues

--- a/docs/static_landing_page/css/landing_page_style.css
+++ b/docs/static_landing_page/css/landing_page_style.css
@@ -191,7 +191,7 @@ li {
 
 /****MASTHEAD****/
 .masthead {
-	height: 400px;
+	height: 100%;
 }
 .masthead-tabs {
 	border-radius: 20px;
